--- a/style.css
+++ b/style.css
@@ -5,54 +5,58 @@ body {
 }
 
 .main-header {
-    background-color: rgba(0, 0, 0, .3);
-    padding-bottom: 10px;
+    background-color: orange;
 }
 
 .title {
     text-align: center;
-    margin: 0;
-    font-size: 8em;
-    font-family: "Helvetica";
+    font-size: 7em;
+    font-family: cursive;
     font-weight: normal;
     color: white;
 }
 
-#card-container {
+#car-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
 }
 
-.card {
+.car {
     width: 300px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 5px;
 }
 
-.card-content {
+.car-content {
     padding: 20px;
     font-family: "Verdana";
     color: #777;
 }
 
-.card-content h2 {
+.car-content h2 {
     margin-top: 0;
     font-size: 20px;
 }
 
-.card img {
+.car img {
     width: 100%;
     height: auto;
 }
 
-.footer {
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, .3);
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 99%;
+    z-index: 9999; /* Ensure the header is above other elements */
+    background-color: grey;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 button {
